fix: fix chart layout issues

--- a/apps/react-starter/src/pages/overview/components/incidents/overview/incident-cards/styles.module.css
+++ b/apps/react-starter/src/pages/overview/components/incidents/overview/incident-cards/styles.module.css
@@ -6,11 +6,3 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
-
-.echarts {
-  position: relative;
-  width: 100%;
-  min-width: 24.75rem;
-  height: 100%;
-  padding-top: 1rem;
-}
