--- a/apps/react-starter/src/pages/overview/components/status-history/styles.module.css
+++ b/apps/react-starter/src/pages/overview/components/status-history/styles.module.css
@@ -7,10 +7,6 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-ix-card {
-  width: 100%;
-}
-
 .echarts {
   position: relative;
   width: 100%;
